# OpenSteamClient

./: .editorconfig  .gitignore  .gitmodules  Avalonia.props  CMakeLists.txt  CONTRIBUTING.md  DEVELOPING.md  Directory.Build.props  Directory.build.props  LICENSE  OpenSteamClient.sln  PKGBUILD  README.md  RELEASING_TODO.md  WINDOWS.md  cibuild.sh
AvaloniaCommon/: AvaloniaCommon.csproj  MessageBox.cs  Theme.cs  ViewModelBase.cs  nuget.config
Bootstrapper/: CMakeLists.txt  README.md
Bootstrapper/managed/: Entry.cs  Program.cs  managed.csproj
Bootstrapper/src/: bootstrapper_functions.cpp  main.cpp
ClientConsole/: ClientConsole.csproj  ClientConsoleAutofacRegistrar.cs  Program.cs  README.md
ClientUI/: App.axaml  App.axaml.cs  AvaloniaApp.axaml  AvaloniaApp.axaml.cs  ClientUI.csproj  ClientUIAutofacRegistrar.cs  MessageBox.cs  Program.cs  README.md  Theme.cs  ViewLocator.cs  app.manifest  global.json  log  nuget.config
Common/: Common.csproj  README.md  log  (+2 more)
MainExe/: .gitignore  CMakeLists.txt  Directory.Build.props  MainExe.csproj  README.md
MainExe/cmake/: idesupport.cmake
MainExe/include/: netbridge.h  sharedlib.h
MainExe/include/netcore/: coreclr_delegates.h
MainExe/managed/: Entry.cs  NullTerminatedUnsafeString.cs  Paths.cs  UnsafeByteArray.cs  Updater.cs  managed.csproj
MainExe/msbuild/: GetEffectiveRuntimeIdentifier.props
MainExe/nugetpkgs/: nugetpkgs.csproj
MainExe/src/: bootstrapper_functions.cpp  main.cpp  netbridge.cpp  sharedlib.cpp
Native/: .gitignore  CMakeLists.txt  Native.csproj  build.sh
Native/MiniUTL/: generichash.cpp  strtools.cpp  utlhashmap.h  utllinkedlist.h  utlmap.h  utlmemory.cpp  utlstring.h  utlvector.h
Native/bootstrappershim/: main.cpp
Native/cmake/: MingW.cmake
Native/htmlhost/: EHTMLCommands.h  IHTMLChromeController.h  main.cpp
Native/htmlhost_fakepid/: main.cpp
Native/launchwrapper/: main.cpp
Native/serviced/: main.cpp
Native/steamutl/: exports.cpp
OpenSteamworks.Native/: .gitignore  CMakeLists.txt  OpenSteamworks.Native.csproj  windowssupport.h
OpenSteamworks.Native/CustomBuildTask/: CompileException.cs  CustomBuildTask.csproj  CustomTask.cs  FileEx.cs  NativeCompilationTask.cs
OpenSteamworks.Native/CustomBuildTask/CMake/: CMake.cs
OpenSteamworks.Native/MiniUTL/: LICENSE  bitstring.cpp  fmtstr.h  miniutl.h  utlbuffer.h  utlpriorityqueue.h  utlrbtree.h  utlstring.cpp
OpenSteamworks.Native/audiostub/: main.cpp
OpenSteamworks.Native/bootstrappershim/: windowsshim.h
OpenSteamworks.Native/cmake/: GCC32.cmake  MingW32.cmake  osxcross.cmake  protobuf_external.cmake
OpenSteamworks.Native/fakeservice/: main.cpp
OpenSteamworks.Native/htmlhost/: EBrowserType.h  EHTMLCommands.h  IHTMLChromeController.h  ghidradefines.h  main.cpp  windowshooks.h  windowssupport.h
OpenSteamworks.Native/htmlhost_fakepid/: main.cpp
OpenSteamworks.Native/launchwrapper/: main.cpp
OpenSteamworks.Native/protobufhack/: afterincludes.h  export.h  generatemaincpp.js  main.cpp
OpenSteamworks.Native/reaper/: main.cpp
OpenSteamworks.Native/serviced/: main.cpp
OpenSteamworks.Native/steamutl/: exports.cpp
nativetest/: CMakeLists.txt
nativetest/include/: clientengine.h  clientshortcuts.h  gameid.h  types.h
nativetest/src/: main.cpp  stdcall_func.s
src/native/: CMakeLists.txt
src/native/cmake/: protobuf_external.cmake
src/native/include/: protobufhack.h
src/native/include/opensteamworks/: BillingCommon.h  CSteamID.h  CUtl.h  ContentServerCommon.h  ECurrencyCode.h  EVoiceResult.h  GameCoordinatorCommon.h  GameServerCommon.h  GameServerStatsCommon.h  HTTPCommon.h  IClientAppDisableUpdate.h  IClientBilling.h  IClientBluetoothManager.h  IClientCompat.h  IClientConfigStore.h  IClientEngine.h  IClientFriends.h  IClientGameCoordinator.h  IClientGameSearch.h  IClientGameServer.h  IClientGameServerInternal.h  IClientGameStats.h  IClientHTTP.h  IClientInventory.h  IClientMatchmaking.h  IClientMatchmakingServers.h  IClientModuleManager.h  IClientNetworkDeviceManager.h  IClientNetworkingUtilsSerialized.h  IClientParties.h  IClientRemoteClientManager.h  IClientRemoteStorage.h  IClientSTARInternal.h  IClientScreenshots.h  IClientShader.h  IClientStreamClient.h  IClientSystemDisplayManager.h  IClientSystemPerfManager.h  IClientUGC.h  IClientUnifiedMessages.h  (+9 more)
src/native/include/opensteamworks/steamutl/: generichash.cpp  minbase_endian.h  utlbuffer.cpp  utlmap.h
src/native/src/client/: launcher.cpp  temporary_logging_solution.cpp  temporary_logging_solution.h
src/native/src/client/ext/: steamclient.cpp
src/native/src/client/gui/: application.cpp  dynamicwebviewlibrarymanager.h
src/native/src/client/gui/dialogs/: installgamedialog.h  installgamedialog.ui  launchoptionsdialog.cpp  launchoptionsdialog.h  launchoptionsdialog.ui  qlistwidgetlaunchoptionitem.cpp  qlistwidgetlaunchoptionitem.h  startupprogressdialog.h  startupprogressdialog.ui  twofactordialog.ui
src/native/src/client/gui/downloads/: downloaddebuggui.h  downloadinfothread.h
src/native/src/client/gui/friends/: friendsdebuggui.cpp  friendsdebuggui.h  friendsdebuggui.ui
src/native/src/client/gui/gamelistview/: appmodel.cpp  appmodel.h  treeitem.h
src/native/src/client/gui/widgets/: clickableqwidget.ui  downloadqueueitem.h  dynamicwebviewwidget.h  dynamicwebviewwidget.ui  filterspopup.h
src/native/src/client/gui/windows/: appsettingswindow.h  mainwindow.h  settingswindow.cpp
src/native/src/client/interop/: app.cpp  app.h  appmanager.cpp  callbackthread.cpp  computerinusethread.h  cutl.hpp  errmsgutils.cpp  errmsgutils.h  includesteamworks.h  launchoption.h
src/native/src/client/login/: loginpolljob.cpp
src/native/src/client/misc_logic/: singleinstance.h
src/native/src/client/startup/: bootstrapper.cpp  startup.h
src/native/src/client/threading/: job.cpp  job.h  threadcontroller.cpp  threadcontroller.h
src/native/src/client/utils/: binarykv.cpp  binarykv.h  jslikebuffer.cpp
src/native/src/common/: ldpath.h  pidutils.cpp
src/native/src/dynamicwebview/: dynamicwebviewinterface.h  main.cpp
src/native/src/utils/launchwrapper/: main.cpp
(+1374 files in other folders)
